Minor design tweakment on mobile

--- a/kid.html
+++ b/kid.html
@@ -132,7 +132,7 @@
         </p>
       </div>
       <div class="imgy">
-        <img src="./image/اطفال.jpg" alt="Children's Museum" />
+        <img src="./image/bac.jpg" alt="Children's Museum" />
       </div>
     </section>
 
