--- a/date.html
+++ b/date.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grand Egyptian Museum</title>
+    <title data-translate="about">Museum History</title>
 
     <!-- Google Fonts for the website -->
     <link
@@ -30,28 +30,39 @@
             <img
               src="./image/photo_2025-03-18_21-31-54-removebg-preview.png"
               width="200px"
-              alt="Logo"
+              alt="Museum Logo"
             />
           </a>
           <i class="fa-solid fa-bars toggle-menu"></i>
           <ul class="nav-links">
             <li class="dropdown">
-              <a href="#" data-translate="about">About</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="about">
+                About
+              </button>
               <ul class="dropdown-menu">
-                <li><a href="#" data-translate="our_story">Our Story</a></li>
                 <li>
-                  <a href="#" data-translate="mission_vision"
+                  <a href="./date.html" data-translate="history"
+                    >Museum History</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./Mission&Vision.html"
+                    data-translate="mission_vision"
                     >Mission & Vision</a
                   >
                 </li>
-                <li><a href="#" data-translate="team">Team</a></li>
+                <li>
+                  <a href="./team.html" data-translate="team"
+                    >Museum management
+                  </a>
+                </li>
               </ul>
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="tours">Tourist</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="tours">
+                Tourist
+              </button>
               <ul class="dropdown-menu">
                 <li>
                   <a href="Tour.html" data-translate="popular_tours"
@@ -64,40 +75,36 @@
                   >
                 </li>
                 <li>
-                  <a
-                    href="../The Grand Egyptian Museum/guidelines.html"
-                    data-translate="guidelines"
-                    >guidelines</a
+                  <a href="./guidelines.html" data-translate="guidelines"
+                    >Guidelines</a
                   >
                 </li>
               </ul>
             </li>
-
             <li class="dropdown egypt-text">
               <a href="./index.html" target="_blank" data-translate="home"
                 >Home</a
               >
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="history">HISTORY</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="Archaeological">
+                Archaeological groups
+              </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="./date.html" data-translate="museum_history"
-                    >Museum history</a
+                  <a href="./Uniquepieces.html" data-translate="Unique_pieces"
+                    >Unique pieces</a
                   >
                 </li>
                 <li>
                   <a
                     href="./The great kings of Egypt.html"
                     data-translate="great_kings"
-                    >The great kings of Egypt</a
+                    >The Great Kings of Egypt</a
                   >
                 </li>
               </ul>
             </li>
-
             <div class="language-switch">
               <button class="lang-btn" data-lang="en">English</button>
               <button class="lang-btn" data-lang="ar">العربية</button>
@@ -108,12 +115,10 @@
     </header>
     <!-- Video background -->
     <div class="video-background">
-      <iframe
-        src="https://www.youtube.com/embed/u461ixv1ws8?autoplay=1&controls=1&loop=1&playlist=u461ixv1ws8"
-        frameborder="0"
-        allow="autoplay; encrypted-media"
-        allowfullscreen
-      ></iframe>
+      <video autoplay muted loop playsinline>
+        <source src="./image/WHD15MB.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
 
     <!-- "About the Museum" section -->
@@ -150,6 +155,35 @@
             The museum features modern architectural design inspired by ancient
             Egyptian civilization and is a new gateway for discovering the
             secrets of the pharaohs in an interactive and advanced way.
+          </p>
+          <p data-translate="museum_inauguration">
+            The museum's grand opening was scheduled for 2022, marking a major
+            milestone in the preservation and exhibition of Egypt's rich
+            heritage. It is expected to attract millions of visitors each year,
+            contributing significantly to the country's tourism and cultural
+            sectors.
+          </p>
+          <p data-translate="museum_exhibitions">
+            The museum will house not only the priceless treasures of
+            Tutankhamun but also numerous other exhibits that highlight Egypt's
+            ancient civilization, ranging from monumental statues to intricate
+            jewelry, and offering a deep dive into the world of the pharaohs,
+            their culture, and their lasting impact on modern civilization.
+          </p>
+          <p data-translate="museum_technology">
+            The Grand Egyptian Museum integrates cutting-edge technology in its
+            design, with features like virtual tours, interactive displays, and
+            advanced preservation methods to ensure the longevity and
+            accessibility of its exhibits. The museum’s design incorporates
+            sustainable and energy-efficient elements, positioning it as a model
+            for future cultural institutions.
+          </p>
+          <p data-translate="museum_impact">
+            This monumental project is expected to enhance Egypt's position as a
+            leading cultural and tourist destination, highlighting the global
+            significance of Egyptian history. It is a landmark project that
+            brings Egypt's ancient heritage to the world while ensuring its
+            preservation for future generations.
           </p>
         </div>
       </div>
