--- a/kid.html
+++ b/kid.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Grand Egyptian Museum</title>
+    <title>Kid's Museum</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap"
       rel="stylesheet"
@@ -24,29 +24,40 @@
           <a class="logo" href="./index.html">
             <img
               src="./image/photo_2025-03-18_21-31-54-removebg-preview.png"
-              width="250px"
-              alt="Logo"
+              width="200px"
+              alt="Museum Logo"
             />
           </a>
           <i class="fa-solid fa-bars toggle-menu"></i>
           <ul class="nav-links">
             <li class="dropdown">
-              <a href="#" data-translate="about">About</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="about">
+                About
+              </button>
               <ul class="dropdown-menu">
-                <li><a href="#" data-translate="our_story">Our Story</a></li>
                 <li>
-                  <a href="#" data-translate="mission_vision"
+                  <a href="./date.html" data-translate="history"
+                    >Museum History</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./Mission&Vision.html"
+                    data-translate="mission_vision"
                     >Mission & Vision</a
                   >
                 </li>
-                <li><a href="#" data-translate="team">Team</a></li>
+                <li>
+                  <a href="./team.html" data-translate="team"
+                    >Museum management
+                  </a>
+                </li>
               </ul>
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="tours">Tourist</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="tours">
+                Tourist
+              </button>
               <ul class="dropdown-menu">
                 <li>
                   <a href="Tour.html" data-translate="popular_tours"
@@ -59,28 +70,25 @@
                   >
                 </li>
                 <li>
-                  <a
-                    href="../The Grand Egyptian Museum/guidelines.html"
-                    data-translate="guidelines"
+                  <a href="./guidelines.html" data-translate="guidelines"
                     >Guidelines</a
                   >
                 </li>
               </ul>
             </li>
-
             <li class="dropdown egypt-text">
               <a href="./index.html" target="_blank" data-translate="home"
                 >Home</a
               >
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="history">History</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="Archaeological">
+                Archaeological groups
+              </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="./date.html" data-translate="museum_history"
-                    >Museum History</a
+                  <a href="./Uniquepieces.html" data-translate="Unique_pieces"
+                    >Unique pieces</a
                   >
                 </li>
                 <li>
@@ -92,7 +100,6 @@
                 </li>
               </ul>
             </li>
-
             <div class="language-switch">
               <button class="lang-btn" data-lang="en">English</button>
               <button class="lang-btn" data-lang="ar">العربية</button>
@@ -132,7 +139,7 @@
         </p>
       </div>
       <div class="imgy">
-        <img src="./image/bac.jpg" alt="Children's Museum" />
+        <img src="./image/اطفال.jpg" alt="Children's Museum" />
       </div>
     </section>
 
