--- a/guidelines.html
+++ b/guidelines.html
@@ -27,28 +27,39 @@
             <img
               src="./image/photo_2025-03-18_21-31-54-removebg-preview.png"
               width="200px"
-              alt="Logo"
+              alt="Museum Logo"
             />
           </a>
           <i class="fa-solid fa-bars toggle-menu"></i>
           <ul class="nav-links">
             <li class="dropdown">
-              <a href="#" data-translate="about">About</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="about">
+                About
+              </button>
               <ul class="dropdown-menu">
-                <li><a href="#" data-translate="our_story">Our Story</a></li>
                 <li>
-                  <a href="#" data-translate="mission_vision"
+                  <a href="./date.html" data-translate="history"
+                    >Museum History</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./Mission&Vision.html"
+                    data-translate="mission_vision"
                     >Mission & Vision</a
                   >
                 </li>
-                <li><a href="#" data-translate="team">Team</a></li>
+                <li>
+                  <a href="./team.html" data-translate="team"
+                    >Museum management
+                  </a>
+                </li>
               </ul>
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="tours">Tourist</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="tours">
+                Tourist
+              </button>
               <ul class="dropdown-menu">
                 <li>
                   <a href="Tour.html" data-translate="popular_tours"
@@ -61,40 +72,36 @@
                   >
                 </li>
                 <li>
-                  <a
-                    href="../The Grand Egyptian Museum/guidelines.html"
-                    data-translate="guidelines"
-                    >guidelines</a
+                  <a href="./guidelines.html" data-translate="guidelines"
+                    >Guidelines</a
                   >
                 </li>
               </ul>
             </li>
-
             <li class="dropdown egypt-text">
               <a href="./index.html" target="_blank" data-translate="home"
                 >Home</a
               >
             </li>
-
             <li class="dropdown">
-              <a href="#" data-translate="history">HISTORY</a>
-              <button class="dropdown-toggle">▼</button>
+              <button class="dropdown-toggle" data-translate="Archaeological">
+                Archaeological groups
+              </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="./date.html" data-translate="museum_history"
-                    >Museum history</a
+                  <a href="./Uniquepieces.html" data-translate="Unique_pieces"
+                    >Unique pieces</a
                   >
                 </li>
                 <li>
                   <a
                     href="./The great kings of Egypt.html"
                     data-translate="great_kings"
-                    >The great kings of Egypt</a
+                    >The Great Kings of Egypt</a
                   >
                 </li>
               </ul>
             </li>
-
             <div class="language-switch">
               <button class="lang-btn" data-lang="en">English</button>
               <button class="lang-btn" data-lang="ar">العربية</button>
