--- a/The great kings of Egypt.html
+++ b/The great kings of Egypt.html
@@ -125,154 +125,165 @@
     </header>
     <!-- kings -->
     <div class="kings">
-      <section class="king-section" id="king-ramesses-ii">
-        <h2 data-translate="ramesses_ii">Ramesses II</h2>
+      <a href="./ramesses-ii.html">
+        <section class="king-section" id="king-ramesses-ii">
+          <h2 data-translate="ramesses_ii">Ramesses II</h2>
 
-        <div class="king-image">
-          <img src="./الملوك/رمسيس2.jpg" alt="Ramesses II" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1279–1213 BCE</p>
-          <p data-translate="ramesses_ii_about">
-            <strong data-translate="about">About:</strong> Ramesses II, also
-            known as Ramesses the Great, was the third pharaoh of the Nineteenth
-            Dynasty of Egypt. He is often regarded as the greatest, most
-            celebrated, and most powerful pharaoh of the Egyptian Empire.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/رمسيس2.jpg" alt="Ramesses II" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1279–1213 BCE</p>
+            <p data-translate="ramesses_ii_about">
+              <strong data-translate="about">About:</strong> Ramesses II, also
+              known as Ramesses the Great, was the third pharaoh of the
+              Nineteenth Dynasty of Egypt. He is often regarded as the greatest,
+              most celebrated, and most powerful pharaoh of the Egyptian Empire.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Thutmose III.html">
+        <section class="king-section" id="king-thutmose-iii">
+          <h2 data-translate="thutmose_iii">Thutmose III</h2>
 
-      <section class="king-section" id="king-thutmose-iii">
-        <h2 data-translate="thutmose_iii">Thutmose III</h2>
+          <div class="king-image">
+            <img src="./الملوك/تحتمس3.jpg" alt="Thutmose III" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1479–1425 BCE</p>
+            <p data-translate="thutmose_iii_about">
+              <strong data-translate="about">About:</strong> Thutmose III is
+              often called the Napoleon of Egypt due to his military campaigns,
+              which expanded Egypt’s empire to its greatest territorial extent.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Akhenaten.html">
+        <section class="king-section" id="king-akhenaten">
+          <h2 data-translate="akhenaten">Akhenaten</h2>
 
-        <div class="king-image">
-          <img src="./الملوك/تحتمس3.jpg" alt="Thutmose III" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1479–1425 BCE</p>
-          <p data-translate="thutmose_iii_about">
-            <strong data-translate="about">About:</strong> Thutmose III is often
-            called the Napoleon of Egypt due to his military campaigns, which
-            expanded Egypt’s empire to its greatest territorial extent.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/اخناتون.jpg" alt="Akhenaten" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1353–1336 BCE</p>
+            <p data-translate="akhenaten_about">
+              <strong data-translate="about">About:</strong> Akhenaten,
+              originally Amenhotep IV, is best known for his religious
+              revolution, where he attempted to replace Egypt’s polytheistic
+              beliefs with monotheism focused on the worship of Aten.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Tutankhamun.html">
+        <section class="king-section" id="king-tutankhamun">
+          <h2 data-translate="tutankhamun">Tutankhamun</h2>
 
-      <section class="king-section" id="king-akhenaten">
-        <h2 data-translate="akhenaten">Akhenaten</h2>
+          <div class="king-image">
+            <img src="./الملوك/توت.jpg" alt="Tutankhamun" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1332–1323 BCE</p>
+            <p data-translate="tutankhamun_about">
+              <strong data-translate="about">About:</strong> Tutankhamun, also
+              known as King Tut, was a young pharaoh whose tomb discovery in
+              1922 revealed extraordinary treasures, making him one of the most
+              famous pharaohs.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Ramesses III.html">
+        <section class="king-section" id="king-ramesses-iii">
+          <h2 data-translate="ramesses_iii">Ramesses III</h2>
 
-        <div class="king-image">
-          <img src="./الملوك/اخناتون.jpg" alt="Akhenaten" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1353–1336 BCE</p>
-          <p data-translate="akhenaten_about">
-            <strong data-translate="about">About:</strong> Akhenaten, originally
-            Amenhotep IV, is best known for his religious revolution, where he
-            attempted to replace Egypt’s polytheistic beliefs with monotheism
-            focused on the worship of Aten.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/رمسيس3.png" alt="Ramesses III" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1186–1155 BCE</p>
+            <p data-translate="ramesses_iii_about">
+              <strong data-translate="about">About:</strong> Ramesses III was
+              the second pharaoh of the Twentieth Dynasty, known for his defense
+              of Egypt against the Sea Peoples and his building programs.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Seti I.html">
+        <section class="king-section" id="king-seti-i">
+          <h2 data-translate="seti_i">Seti I</h2>
 
-      <section class="king-section" id="king-tutankhamun">
-        <h2 data-translate="tutankhamun">Tutankhamun</h2>
+          <div class="king-image">
+            <img src="./الملوك/سيتي1.jpg" alt="Seti I" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1290–1279 BCE</p>
+            <p data-translate="seti_i_about">
+              <strong data-translate="about">About:</strong> Seti I was the
+              second pharaoh of the Nineteenth Dynasty, known for his military
+              campaigns and contributions to Egyptian architecture.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Hatshepsut.html">
+        <section class="king-section" id="king-hatshepsut">
+          <h2 data-translate="hatshepsut">Hatshepsut</h2>
 
-        <div class="king-image">
-          <img src="./الملوك/توت.jpg" alt="Tutankhamun" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1332–1323 BCE</p>
-          <p data-translate="tutankhamun_about">
-            <strong data-translate="about">About:</strong> Tutankhamun, also
-            known as King Tut, was a young pharaoh whose tomb discovery in 1922
-            revealed extraordinary treasures, making him one of the most famous
-            pharaohs.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/حتشبسوت.jpg" alt="Hatshepsut" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1479–1458 BCE</p>
+            <p data-translate="hatshepsut_about">
+              <strong data-translate="about">About:</strong> Hatshepsut was one
+              of Egypt's few female pharaohs and is regarded as one of the most
+              successful pharaohs of the New Kingdom, known for her extensive
+              building projects.
+            </p>
+          </div>
+        </section>
+      </a>
+      <a href="./Siptah.html">
+        <section class="king-section" id="king-siphtah">
+          <h2 data-translate="siphtah">Siptah</h2>
 
-      <section class="king-section" id="king-ramesses-iii">
-        <h2 data-translate="ramesses_iii">Ramesses III</h2>
-
-        <div class="king-image">
-          <img src="./الملوك/رمسيس3.png" alt="Ramesses III" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1186–1155 BCE</p>
-          <p data-translate="ramesses_iii_about">
-            <strong data-translate="about">About:</strong> Ramesses III was the
-            second pharaoh of the Twentieth Dynasty, known for his defense of
-            Egypt against the Sea Peoples and his building programs.
-          </p>
-        </div>
-      </section>
-
-      <section class="king-section" id="king-seti-i">
-        <h2 data-translate="seti_i">Seti I</h2>
-
-        <div class="king-image">
-          <img src="./الملوك/سيتي1.jpg" alt="Seti I" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1290–1279 BCE</p>
-          <p data-translate="seti_i_about">
-            <strong data-translate="about">About:</strong> Seti I was the second
-            pharaoh of the Nineteenth Dynasty, known for his military campaigns
-            and contributions to Egyptian architecture.
-          </p>
-        </div>
-      </section>
-
-      <section class="king-section" id="king-hatshepsut">
-        <h2 data-translate="hatshepsut">Hatshepsut</h2>
-
-        <div class="king-image">
-          <img src="./الملوك/حتشبسوت.jpg" alt="Hatshepsut" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1479–1458 BCE</p>
-          <p data-translate="hatshepsut_about">
-            <strong data-translate="about">About:</strong> Hatshepsut was one of
-            Egypt's few female pharaohs and is regarded as one of the most
-            successful pharaohs of the New Kingdom, known for her extensive
-            building projects.
-          </p>
-        </div>
-      </section>
-
-      <section class="king-section" id="king-siphtah">
-        <h2 data-translate="siphtah">Siptah</h2>
-
-        <div class="king-image">
-          <img src="./الملوك/سبتاح.jpg" alt="Siptah" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1197–1191 BCE</p>
-          <p data-translate="siphtah_about">
-            <strong data-translate="about">About:</strong> Siptah was a pharaoh
-            of the Nineteenth Dynasty, who ruled Egypt during a time of
-            political instability, possibly due to a regency government.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/سبتاح.jpg" alt="Siptah" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1197–1191 BCE</p>
+            <p data-translate="siphtah_about">
+              <strong data-translate="about">About:</strong> Siptah was a
+              pharaoh of the Nineteenth Dynasty, who ruled Egypt during a time
+              of political instability, possibly due to a regency government.
+            </p>
+          </div>
+        </section>
+      </a>
 
       <!-- New Kings -->
-      <section class="king-section" id="king-amenhotep-ii">
-        <h2 data-translate="amenhotep_ii">Amenhotep II</h2>
+      <a href="./Amenhotep II.html">
+        <section class="king-section" id="king-amenhotep-ii">
+          <h2 data-translate="amenhotep_ii">Amenhotep II</h2>
 
-        <div class="king-image">
-          <img src="./الملوك/أمنحتب الثاني.png" alt="Amenhotep II" />
-        </div>
-        <div class="king-info">
-          <p><strong data-translate="reign">Reign:</strong> 1427–1401 BCE</p>
-          <p data-translate="amenhotep_ii_about">
-            <strong data-translate="about">About:</strong> Amenhotep II was a
-            pharaoh of the Eighteenth Dynasty, renowned for his military
-            achievements and for expanding Egypt’s borders during his reign.
-          </p>
-        </div>
-      </section>
+          <div class="king-image">
+            <img src="./الملوك/أمنحتب الثاني.png" alt="Amenhotep II" />
+          </div>
+          <div class="king-info">
+            <p><strong data-translate="reign">Reign:</strong> 1427–1401 BCE</p>
+            <p data-translate="amenhotep_ii_about">
+              <strong data-translate="about">About:</strong> Amenhotep II was a
+              pharaoh of the Eighteenth Dynasty, renowned for his military
+              achievements and for expanding Egypt’s borders during his reign.
+            </p>
+          </div>
+        </section>
+      </a>
     </div>
     <!-- start footer  -->
     <footer>
