--- a/index.html
+++ b/index.html
@@ -155,6 +155,38 @@
         </div>
       </div>
     </section>
+    <section
+      id="map-section"
+      style="padding: 40px 0; background-color: #f9f9f9"
+    >
+      <div style="max-width: 1000px; margin: auto; text-align: center">
+        <h2
+          data-translate="Location"
+          style="
+            font-size: 28px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: gold;
+          "
+        >
+          trip in the lobby
+        </h2>
+        <div
+          style="border: 2px solid #ccc; border-radius: 12px; overflow: hidden"
+        >
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1746643686672!6m8!1m7!1sCAoSF0NJSE0wb2dLRUlDQWdJQ25fNl94dWdF!2m2!1d29.99388848704362!2d31.1195160408276!3f53.27680401329073!4f-2.6581794476590233!5f1.9545793729916014"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
+        </div>
+      </div>
+    </section>
 
     <div class="section1">
       <div class="container">
@@ -258,9 +290,12 @@
             </a>
           </div>
           <div class="box">
-            <img src="./image/3d.jpeg" alt="Virtual Tour" />
-            <h2 data-translate="virtual_tour">Virtual Tour</h2>
-            <a href="./Virtual.html" target="_blank">
+            <img src="./الملوك/توت.jpg" alt="Virtual Tour" />
+            <h2 data-translate="virtual_tour">Tutankhamun Hall</h2>
+            <a
+              href="https://my.matterport.com/show/?m=85n8j312Ur4"
+              target="_blank"
+            >
               <button class="show-btn" data-translate="explore">
                 Go Explore!
               </button>
@@ -269,7 +304,6 @@
         </div>
       </div>
     </div>
-
     <div class="main-contact">
       <div class="container">
         <div class="content">
