--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <title>تعديل جولات المتحف</title>
+    <title>تعديل على محتوى الموقع المتحف</title>
     <style>
       body {
         font-family: "Cairo", sans-serif;
