--- a/Tour.html
+++ b/Tour.html
@@ -210,10 +210,7 @@
           </div>
 
           <div class="contact-info">
-            <img
-              src="../The Grand Egyptian Museum/image/وزارة_السياحة_والآثار.png"
-              alt="Ministry Logo"
-            />
+            <img src="./image/وزارة_السياحة_والآثار.png" alt="Ministry Logo" />
           </div>
 
           <div class="contact-details">
