--- a/Mission&Vision.html
+++ b/Mission&Vision.html
@@ -191,7 +191,7 @@
 
           <div class="contact">
             <img
-              src="../The Grand Egyptian Museum/image/وزارة_السياحة_والآثار.png"
+            src="./image/وزارة_السياحة_والآثار.png" 
               alt="Ministry Logo"
             />
           </div>
