--- a/index.html
+++ b/index.html
@@ -405,10 +405,9 @@
             </ul>
           </div>
           <div class="contact-info">
-            <img
-              src="../The Grand Egyptian Museum/image/وزارة_السياحة_والآثار.png"
-              alt="Ministry Logo"
-            />
+            <img 
+            src="./image/وزارة_السياحة_والآثار.png" 
+             alt="Ministry Logo" />
           </div>
           <div class="contact-details">
             <h2 data-translate="call_us">Call Us</h2>
