--- a/team.html
+++ b/team.html
@@ -306,10 +306,7 @@
           </div>
 
           <div class="contact">
-            <img
-              src="../The Grand Egyptian Museum/image/وزارة_السياحة_والآثار.png"
-              alt="Ministry Logo"
-            />
+            <img src="./image/وزارة_السياحة_والآثار.png" alt="Ministry Logo" />
           </div>
 
           <div class="contact">
