Visitor registration feature

--- a/date.html
+++ b/date.html
@@ -26,7 +26,7 @@
       <!-- Navigation menu -->
       <div class="container">
         <nav class="navbar">
-          <a class="logo" href="./index.html">
+          <a class="logo" href="./home.html">
             <img
               src="./image/photo_2025-03-18_21-31-54-removebg-preview.png"
               width="200px"
@@ -82,7 +82,7 @@
               </ul>
             </li>
             <li class="dropdown egypt-text">
-              <a href="./index.html" target="_blank" data-translate="home"
+              <a href="./home.html" target="_blank" data-translate="home"
                 >Home</a
               >
             </li>
