--- a/Tutankhamun.html
+++ b/Tutankhamun.html
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <nav class="navbar">
-          <a class="logo" href="./index.html">
+          <a class="logo" href="./home.html">
             <img
               src="./image/photo_2025-03-18_21-31-54-removebg-preview.png"
               width="200px"
@@ -48,8 +48,8 @@
                 </li>
                 <li>
                   <a href="./team.html" data-translate="team"
-                    >Museum management</a
-                  >
+                    >Museum management
+                  </a>
                 </li>
               </ul>
             </li>
@@ -76,7 +76,7 @@
               </ul>
             </li>
             <li class="dropdown egypt-text">
-              <a href="./index.html" target="_blank" data-translate="home"
+              <a href="./home.html" target="_blank" data-translate="home"
                 >Home</a
               >
             </li>
