--- a/admin.html
+++ b/admin.html
@@ -2,48 +2,121 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <title>تعديل على محتوى الموقع المتحف</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>لوحة التحكم</title>
     <style>
       body {
-        font-family: "Cairo", sans-serif;
-        background-color: #f4f4f4;
-        padding: 40px;
+        font-family: "Arial", sans-serif;
+        background-color: #f2f2f2;
+        margin: 0;
+        padding: 0;
       }
-      .form-box {
+
+      .container {
+        max-width: 600px;
+        margin: 50px auto;
         background: #fff;
-        padding: 20px;
-        border-radius: 10px;
+        padding: 30px;
+        border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin-bottom: 30px;
       }
-      input,
-      textarea,
-      button {
+
+      h2 {
+        text-align: center;
+        margin-bottom: 25px;
+        color: #333;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: bold;
+        color: #444;
+      }
+
+      input[type="text"],
+      textarea {
         width: 100%;
-        margin: 10px 0;
         padding: 10px;
         font-size: 16px;
-        border-radius: 6px;
         border: 1px solid #ccc;
+        border-radius: 4px;
+        margin-bottom: 20px;
+        box-sizing: border-box;
       }
+
+      textarea {
+        resize: vertical;
+      }
+
       button {
+        width: 100%;
+        padding: 12px;
         background-color: #007bff;
         color: white;
+        font-size: 16px;
         border: none;
+        border-radius: 4px;
         cursor: pointer;
       }
+
       button:hover {
         background-color: #0056b3;
       }
-      .msg {
+
+      .message {
+        margin-top: 20px;
         text-align: center;
         color: green;
-        margin-top: 10px;
-        display: none;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
-    
+    <div class="container">
+      <h2>لوحة التحكم</h2>
+      <form id="dashboardForm">
+        <label for="title">العنوان:</label>
+        <input type="text" id="title" placeholder="اكتب العنوان هنا" required />
+
+        <label for="content">المحتوى:</label>
+        <textarea
+          id="content"
+          rows="6"
+          placeholder="اكتب المحتوى هنا"
+          required
+        ></textarea>
+
+        <button type="submit">حفظ المحتوى</button>
+      </form>
+
+      <div class="message" id="successMessage"></div>
+    </div>
+
+    <script>
+      const form = document.getElementById("dashboardForm");
+      const titleInput = document.getElementById("title");
+      const contentInput = document.getElementById("content");
+      const messageDiv = document.getElementById("successMessage");
+
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const title = titleInput.value.trim();
+        const content = contentInput.value.trim();
+
+        if (title && content) {
+          console.log("العنوان:", title);
+          console.log("المحتوى:", content);
+          messageDiv.textContent = "✅ تم حفظ المحتوى بنجاح!";
+          form.reset();
+        } else {
+          messageDiv.textContent = "❌ يرجى ملء جميع الحقول.";
+          messageDiv.style.color = "red";
+        }
+
+        // يمكنك تخزين المحتوى في localStorage لو أردت لاحقًا
+      });
+    </script>
   </body>
 </html>
